@@ -362,7 +362,27 @@
       </li>
     </ul>
 
-    <h3>Ingress Table 7: LB</h3>
+    <h3>Ingress Table 7: <code>from-lport</code> QoS marking</h3>
+
+    <p>
+      Logical flows in this table closely reproduce those in the
+      <code>QoS</code> table in the <code>OVN_Northbound</code> database
+      for the <code>from-lport</code> direction.
+    </p>
+
+    <ul>
+      <li>
+        For every qos_rules for every logical switch a flow will be added at
+        priorities mentioned in the QoS table.
+      </li>
+
+      <li>
+        One priority-0 fallback flow that matches all packets and advances to
+        the next table.
+      </li>
+    </ul>
+
+    <h3>Ingress Table 8: LB</h3>
 
     <p>
       It contains a priority-0 flow that simply moves traffic to the next
@@ -375,7 +395,7 @@
       connection.)
     </p>
 
-    <h3>Ingress Table 8: Stateful</h3>
+    <h3>Ingress Table 9: Stateful</h3>
 
     <ul>
       <li>
@@ -412,7 +432,7 @@
       </li>
     </ul>
 
-    <h3>Ingress Table 9: ARP/ND responder</h3>
+    <h3>Ingress Table 10: ARP/ND responder</h3>
 
     <p>
       This table implements ARP/ND responder for known IPs.  It contains these
@@ -507,7 +527,7 @@ nd_na {
       </li>
     </ul>
 
-    <h3>Ingress Table 10: DHCP option processing</h3>
+    <h3>Ingress Table 11: DHCP option processing</h3>
 
     <p>
       This table adds the DHCPv4 options to a DHCPv4 packet from the
@@ -567,7 +587,7 @@ next;
       </li>
     </ul>
 
-    <h3>Ingress Table 11: DHCP responses</h3>
+    <h3>Ingress Table 12: DHCP responses</h3>
 
     <p>
       This table implements DHCP responder for the DHCP replies generated by
@@ -649,7 +669,7 @@ output;
       </li>
     </ul>
 
-    <h3>Ingress Table 12: Destination Lookup</h3>
+    <h3>Ingress Table 13 Destination Lookup</h3>
 
     <p>
       This table implements switching behavior.  It contains these logical
@@ -716,7 +736,14 @@ output;
       <code>to-lport</code> ACLs.
     </p>
 
-    <h3>Egress Table 5: Stateful</h3>
+    <h3>Egress Table 5: <code>to-lport</code> QoS marking</h3>
+
+    <p>
+      This is similar to ingress table <code>QoS marking</code> except for
+      <code>to-lport</code> qos rules.
+    </p>
+
+    <h3>Egress Table 6: Stateful</h3>
 
     <p>
       This is similar to ingress table <code>Stateful</code> except that
@@ -727,10 +754,10 @@ output;
       Also a priority 34000 logical flow is added for each logical port which
       has DHCPv4 options defined to allow the DHCPv4 reply packet and which has
       DHCPv6 options defined to allow the DHCPv6 reply packet from the
-      <code>Ingress Table 11: DHCP responses</code>.
+      <code>Ingress Table 12: DHCP responses</code>.
     </p>
 
-    <h3>Egress Table 6: Egress Port Security - IP</h3>
+    <h3>Egress Table 7: Egress Port Security - IP</h3>
 
     <p>
       This is similar to the port security logic in table
@@ -740,7 +767,7 @@ output;
       <code>ip4.src</code> and <code>ip6.src</code>
     </p>
 
-    <h3>Egress Table 7: Egress Port Security - L2</h3>
+    <h3>Egress Table 8: Egress Port Security - L2</h3>
 
     <p>
       This is similar to the ingress port security logic in ingress table
