@@ -119,6 +119,10 @@
       Access control rules that apply to packets within the logical switch.
     </column>
 
+    <column name="qos_rules">
+      QOS marking rules that apply to packets within the logical switch.
+    </column>
+
     <group title="other_config">
       <p>
         Additional configuration options for the logical switch.
@@ -897,6 +901,59 @@
         See <em>External IDs</em> at the beginning of this document.
       </column>
     </group>
+  </table>
+
+  <table name="QoS" title="QOS table">
+    <p>
+      Each row in this table represents one QOS rule for a logical switch
+      that points to it through its <ref column="qos_rules"/> column.  The <ref
+      column="action"/> column for the highest-<ref column="priority"/>
+      matching row in this table determines a packet's qos marking.  If no row
+      matches, packets will not have any qos marking.
+    </p>
+
+    <column name="priority">
+      <p>
+        The QOS rule's priority.  Rules with numerically higher priority
+        take precedence over those with lower.  If two QOS rules with
+        the same priority both match, then the one actually applied to a
+        packet is undefined.
+      </p>
+    </column>
+
+    <column name="direction">
+      <p>
+        The value of this field is similar to <ref colun="direction"
+        table="ACL" db="OVN_Northbound"/> column in the OVN Northbound
+        database's <ref table="ACL" db="OVN_Northbound"/> table.
+      </p>
+    </column>
+
+    <column name="match">
+      <p>
+        The packets that the QOS rules should match, in the same expression
+        language used for the <ref column="match" table="Logical_Flow"
+        db="OVN_Southbound"/> column in the OVN Southbound database's
+        <ref table="Logical_Flow" db="OVN_Southbound"/> table.  The
+        <code>outport</code> logical port is only available in the
+        <code>to-lport</code> direction (the <code>inport</code> is
+        available in both directions).
+      </p>
+    </column>
+
+    <column name="action">
+      <p>The action to be performed on the matched packet</p>
+      <ul>
+        <li>
+          <code>dscp</code>: The value of this action should be in the
+          range of 0 to 63 (inclusive).
+        </li>
+      </ul>
+    </column>
+
+    <column name="external_ids">
+      See <em>External IDs</em> at the beginning of this document.
+    </column>
   </table>
 
   <table name="Logical_Router_Port" title="L3 logical router port">
